--- a/index.html
+++ b/index.html
@@ -108,5 +108,6 @@ footer {
     <footer>
         <p>&copy; 2024 Work Opportunities in Japan</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
