--- a/job.html
+++ b/job.html
@@ -6,11 +6,43 @@
     <title>Jobs</title>
 </head>
 <style>
+    header {
+    background-color:#560861c4;
+    color: #fff;
+    padding :20px;
+    }
+    nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+nav ul li {
+    display: inline;
+    margin-right: 20px;
+}
+
+nav ul li a {
+    color: #ffffff;
+    text-decoration: none;
+}
+
     .container{
-        background-color: #75128294;
+        background-color: #560861c4;
+        color: white;
     }
 </style>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="jobs.html">Jobs</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="about.html">About</a></li>
+            </ul>
+        </nav>
+    </header>
     <section id="jobs">
         <div class="container">
             <h2>Available Jobs</h2>
